<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/default_margin_bottom_scrollview"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/movie_details_poster"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_marginTop="14dp"
                    android:scaleType="fitCenter"
                    tools:src="@drawable/thecourier" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@color/darkBlue"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:padding="4dp"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/TitleTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details_movie_title"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/movie_details_favoris"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_unstar"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/movie_details_title"
                        style="@style/MovieTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/movie_title" />

                    <TextView
                        android:id="@+id/movie_details_original_title"
                        style="@style/DefaultTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/movie_original_title" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_top_movie_details"
                        android:orientation="horizontal">

                        <RatingBar
                            android:id="@+id/movie_details__vote_average"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="10"
                            android:progressTint="#FFEB3B"
                            android:secondaryProgressTint="#FFEB3B"
                            tools:rating="7.5" />

                        <TextView
                            android:id="@+id/movie_details_vote_count"
                            style="@style/DefaultTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie_vote_count" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/default_margin_top_movie_details"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/DefaultHintTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_margin_end_hint"
                            android:text="@string/movie_genres_hint" />

                        <TextView
                            android:id="@+id/movie_details_genres"
                            style="@style/DefaultTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie_genres" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/default_margin_top_movie_details"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/DefaultHintTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_margin_end_hint"
                            android:text="@string/movie_release_date_hint" />

                        <TextView
                            android:id="@+id/movie_details_release_date"
                            style="@style/DefaultTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie_release_date" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/default_margin_top_movie_details"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/DefaultHintTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_margin_end_hint"
                            android:text="@string/movie_status_hint" />

                        <TextView
                            android:id="@+id/movie_details_status"
                            style="@style/DefaultTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie_status" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/default_margin_top_movie_details"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/DefaultHintTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_margin_end_hint"
                            android:text="@string/movie_runtime_hint" />

                        <TextView
                            android:id="@+id/movie_details_runtime"
                            style="@style/DefaultTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie_runtime" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/default_margin_top_movie_details"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/DefaultHintTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_margin_end_hint"
                            android:text="@string/movie_budget_hint" />

                        <TextView
                            android:id="@+id/movie_details_budget"
                            style="@style/DefaultTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie_budget" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/default_margin_top_movie_details"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/DefaultHintTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_margin_end_hint"
                            android:text="@string/movie_revenue_hint" />

                        <TextView
                            android:id="@+id/movie_details_revenue"
                            style="@style/DefaultTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie_revenue" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/default_margin_top_movie_details"
                        android:orientation="vertical">

                        <TextView
                            style="@style/DefaultHintTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/default_margin_end_hint"
                            android:text="@string/movie_overview_hint" />

                        <TextView
                            android:id="@+id/movie_details_overview"
                            style="@style/DefaultTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            tools:text="@string/movie_overview" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/movie_details_recommendations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_recommended_movies_button" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/navigation_bar_main" />
</androidx.constraintlayout.widget.ConstraintLayout>