<?xml version="1.0" encoding="utf-8"?>


<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:paddingHorizontal="4dp"
    android:paddingVertical="6dp"
    android:theme="?attr/actionBarTheme"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/app_name"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/app_name" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_search"
        android:padding="6dp">

        <EditText
            android:id="@+id/charsearch_edittext"
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/darkGrey"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            tools:text="@string/movie_title" />

        <ImageView
            android:id="@+id/search_vectorasset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/movie_poster"
            android:src="@drawable/baseline_search_24"
            app:tint="@color/white" />
    </RelativeLayout>


</androidx.appcompat.widget.Toolbar>